demo/target/surefire-reports/examples.testSuite.uiTests.uiTestRunner.txt
-------------------------------------------------------------------------------
Test set: examples.testSuite.uiTests.uiTestRunner
-------------------------------------------------------------------------------
Tests run: 5, Failures: 5, Errors: 0, Skipped: 0, Time elapsed: 79.499 s <<< FAILURE! - in examples.testSuite.uiTests.uiTestRunner
testApi[1][1]  Time elapsed: 16.151 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
js failed:
>>>>
01: input('#user-name', '<username'>)
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:32 Expected an operand but found )
input('#user-name', '<username'>)
                                ^

- org.graalvm.polyglot.Context.eval(Context.java:425)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:139)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:135)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1190)
- com.intuit.karate.ScenarioActions.eval(ScenarioActions.java:388)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)

classpath:examples/testSuite/uiTests/basicUITestScenarioOutline.feature:10

testApi[1][2]  Time elapsed: 12.449 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
js failed:
>>>>
01: input('#user-name', '<username'>)
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:32 Expected an operand but found )
input('#user-name', '<username'>)
                                ^

- org.graalvm.polyglot.Context.eval(Context.java:425)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:139)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:135)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1190)
- com.intuit.karate.ScenarioActions.eval(ScenarioActions.java:388)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)

classpath:examples/testSuite/uiTests/basicUITestScenarioOutline.feature:10

testApi[1][3]  Time elapsed: 0.001 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
result is neither list nor function: [type: BYTES, value: [B@3a3ed300]
classpath:examples/testSuite/uiTests/basicUITestScenarioOutline.feature:39

testApi[1][4]  Time elapsed: 35.191 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
js failed:
>>>>
01: input('#user-name', <username>)
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:20 Expected an operand but found <
input('#user-name', <username>)
                    ^

- org.graalvm.polyglot.Context.eval(Context.java:425)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:139)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:135)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1190)
- com.intuit.karate.ScenarioActions.eval(ScenarioActions.java:388)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)

classpath:examples/testSuite/uiTests/basicUITestScenarioOutline.feature:46

testApi[1][5]  Time elapsed: 12.747 s  <<< FAILURE!
org.opentest4j.AssertionFailedError: 
js failed:
>>>>
01: input('#user-name', <username>)
<<<<
org.graalvm.polyglot.PolyglotException: SyntaxError: Unnamed:1:20 Expected an operand but found <
input('#user-name', <username>)
                    ^

- org.graalvm.polyglot.Context.eval(Context.java:425)
- com.intuit.karate.graal.JsEngine.evalForValue(JsEngine.java:139)
- com.intuit.karate.graal.JsEngine.eval(JsEngine.java:135)
- com.intuit.karate.core.ScenarioEngine.evalJs(ScenarioEngine.java:1190)
- com.intuit.karate.ScenarioActions.eval(ScenarioActions.java:388)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
- java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)

classpath:examples/testSuite/uiTests/basicUITestScenarioOutline.feature:46

